--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias.html.twig
@@ -19,7 +19,7 @@
                               <div class="panel panel-default">
                                   <div class="panel-heading">  
                                       <h4 class="panel-title">
-                                          <a data-toggle="collapse" data-parent="#accordion" href="#{{ facultad.Carrera }}_{{ facultad.Facultad }}" class='tabscarrera' id="na_{{ facultad.Carrera }}_{{ facultad.Facultad }}_f" >{{ facultad.Nombre }}</a>
+                                          <a data-toggle="collapse" data-parent="#accordion" href="#{{ facultad.Carrera }}_{{ facultad.Facultad }}" class='tabscarrera' id="na_{{ facultad.Carrera }}_{{ facultad.Facultad }}_f" name="{{ facultad.Nombre }}">{{ facultad.Nombre }}</a>
                                       </h4>
                                   </div>
 
@@ -74,6 +74,7 @@
            var idFacultad  = splitCarrera[2];
            var indicaClase  = splitCarrera[3];
            var idEstudiante  = {{idEstudiante}}; 
+           var carrera =$(this).attr('name');
            var tablaNotasa = $('#ctn_'+idCarrera+'_'+idFacultad);
            if(indicaClase!=null )
            {
@@ -81,7 +82,7 @@
             $('.active_a').addClass('active');
             $('.temporal').removeClass('active');
            }
-          var obj_data = {'idEstudiante': idEstudiante,'idCarrera':idCarrera,'idIndica':idIndica,'idFacultad':idFacultad};
+          var obj_data = {'idEstudiante': idEstudiante,'idCarrera':idCarrera,'idIndica':idIndica,'idFacultad':idFacultad,'carrera':carrera};
              var jumpAction = '{{path('estudiantes_anulacion_materias')}}';
               $.ajax({
                  url:   jumpAction,
