--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menu_estudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menu_estudiantes.html.twig
@@ -47,7 +47,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-6">
+               <!--  <div class="col-lg-12 col-md-6">
                     <div class="panel panel-green">
                         <div class="panel-heading">
                             <div class="row">
@@ -67,7 +67,7 @@
                             </div>
                         </a>
                     </div>
-                </div>
+                </div> -->
                 <!-- aqui termina todo -->
 
                 <div class="col-lg-12 col-md-6">
