--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menuderecho.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menuderecho.html.twig
@@ -14,11 +14,11 @@
                         <i class='fa fa-list' title="Anlación"></i>
                   </div>
              </a>
-             <a  href="{{path('estudiantes_deudas')}}">
+             <!-- <a  href="{{path('estudiantes_deudas')}}">
                 <div class='btn btn-success btn-circle btn-xl' >
                         <i class='fa fa-money' title="Deudas"></i>
                 </div>
-             </a>
+             </a> -->
              <a  href="{{path('estudiantes_notas_actuales')}}">
                 <div class='btn btn-info btn-circle btn-xl' >
                         <i class='fa fa-table' title="Notas"></i>
@@ -116,11 +116,11 @@
                         <i class='fa fa-list' title="Matriculación"></i>
                   </div>
              </a>
-             <a  href="{{path('estudiantes_deudas')}}">
+             <!-- <a  href="{{path('estudiantes_deudas')}}">
                 <div class='btn btn-success btn-circle btn-xl' >
                         <i class='fa fa-money' title="Deudas"></i>
                 </div>
-             </a>
+             </a> -->
              <a  href="{{path('estudiantes_notas_actuales')}}">
                 <div class='btn btn-info btn-circle btn-xl' >
                         <i class='fa fa-table' title="Notas"></i>
