--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/index_notificaciones.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/index_notificaciones.html.twig
@@ -11,8 +11,9 @@
     });  
 </script>
    
-<div class="content"> 
+<section class="content">
 
+      <div class="page-content" style="height: 600px;">
    <div  class="col-xs-14">
      
        <form id="form-enviar" method="post" action="{{ path('dayscript_index') }}">  
@@ -153,6 +154,8 @@
     
                </div>
    </div>
+                     
+  </div>
 {% endblock %}
 
 
