--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/mensajes_universidad.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/mensajes_universidad.html.twig
@@ -11,8 +11,10 @@
     });  
 </script>
 
+       <section class="content">
+
+      <div class="page-content" style="height: 600px;">
         
-        <section class="">
           <div class="">
              
             
@@ -63,7 +65,11 @@
             </div>
         
           </div>
+                            
+                            </div>
         </section>
+                            
+        
 
    
                 
