--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/notificaciones_universidad.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/notificaciones_universidad.html.twig
@@ -8,7 +8,10 @@
            TableAdvanced.init();
     });  
 </script>
- <section class="">
+
+  <section class="content">
+
+      <div class="page-content" style="height: 600px;">
           <div class="">
              
             
@@ -61,7 +64,10 @@
             </div>
         
           </div>
+                          </div>
+
         </section>
+                          
 
     
 {% endblock %}
