--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/eventos_universidad.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/eventos_universidad.html.twig
@@ -6,9 +6,13 @@
     <script type="text/javascript">
   $(function () {
            TableAdvanced.init();
+        $(".selection").remove();
     });  
 </script>
-     <section class="">
+
+  <section class="content">
+
+      <div class="page-content" style="height: 600px;">
           <div class="">
              
             
@@ -62,9 +66,11 @@
             </div>
         
           </div>
+                        
+              </div>
         </section>
 
-    
+
 {% endblock %}
 
 
