--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -21,7 +21,7 @@
         <li class="dropdown messages-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-envelope-o"></i>
-            <span class="label label-success">4</span>
+          {#  <span class="label label-success">4</span>#}
           </a>
           <ul class="dropdown-menu">
             <li class="header">Tiene 4 Mensajes Nuevos</li>
@@ -49,7 +49,7 @@
         <li class="dropdown notifications-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-bell-o"></i>
-            <span class="label label-warning">10</span>
+           {# <span class="label label-warning">10</span>#}
           </a>
           <ul class="dropdown-menu">
             <li class="header">Tienes 10 Notificaciones</li>
@@ -70,7 +70,7 @@
         <li class="dropdown tasks-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-flag-o"></i>
-            <span class="label label-danger">9</span>
+         {#   <span class="label label-danger">9</span>#}
           </a>
           <ul class="dropdown-menu">
            <li class="header">Tienes 10 Eventos</li>
