--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -39,7 +39,7 @@
           <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-          <li><a href="{{path('admin_academico_home')}}"><i class="fa fa-circle-o"></i> Calendario por Carrera </a></li>
+          <li><a href="{{path('admin_academico_home')}}"><i class="fa fa-circle-o"></i> Calendario Academico </a></li>
           <li><a href="{{path('admin_carreras_ordenpago')}}"><i class="fa fa-circle-o"></i> Orden de Pago </a></li>
           <li><a href="{{path('admin_academico_estudiante_carrera')}}"><i class="fa fa-circle-o"></i> Estudiantes por Carrera</a></li>
 
