--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/listarsolicitudes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/listarsolicitudes.html.twig
@@ -45,7 +45,7 @@
                                     <td>Cambio de Paralelo</td>
                                     <td>Aceptada</td>
                                     <td style="text-align: center">12/12/12</td>
-                                    <td style="text-align: center">  <a href="#" id="Mensaje_1" name="Mensaje_1">
+                                    <td style="text-align: center">  <a target="_blank" href="{{path('estudiantes_pdf_solicitudes')}}" id="Mensaje_1" name="Mensaje_1">
                                     <i class="fa fa-download"></i>                                                           
                                     </a></td>
                                 </tr>
