--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoCarreras.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoCarreras.html.twig
@@ -23,25 +23,26 @@
 			<!-- .panel-heading -->
 			<div class="panel-body">
 				<div class="panel-group" id="accordionCarreras">
+                                   
                {% if data.datosCarreras=='error'%} Se presentó un problema para presentar las carreras. Por favor contacte e soporte técnico. {% endif %}
                {% for countCarreras, datosCarrera in data.datosCarreras %}
-                  <input id="materiaSeleccionada-Carrera_{{datosCarrera.id_sa_carrera}}" value="" type="hidden" >
-                  <input id="nombreMateriaSeleccionada-Carrera_{{datosCarrera.id_sa_carrera}}" value="" type="hidden" >
-                  <input id="inicioCiclo-Carrera_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.fecha_inicio}}" type="hidden" >
-                  <input id="finCiclo-Carrera_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.fecha_fin}}" type="hidden" >
-                  <div id="panelCentralCarrera-{{datosCarrera.id_sa_carrera}}" class="panel panel-default">
+                  <input id="materiaSeleccionada-Carrera_{{datosCarrera.idCarrera}}" value="" type="hidden" >
+                  <input id="nombreMateriaSeleccionada-Carrera_{{datosCarrera.idCarrera}}" value="" type="hidden" >
+                  <input id="inicioCiclo-Carrera_{{datosCarrera.idCarrera}}" value="{{datosCarrera.fecha_inicio}}" type="hidden" >
+                  <input id="finCiclo-Carrera_{{datosCarrera.idCarrera}}" value="{{datosCarrera.fecha_fin}}" type="hidden" >
+                  <div id="panelCentralCarrera-{{datosCarrera.idCarrera}}" class="panel panel-default">
                      <div class="panel-heading">
                         <h4 class="panel-title">
-                           <a id="idCarrera-{{datosCarrera.id_sa_carrera}}" class="linkCarreras" data-toggle="collapse" data-parent="#accordionCarreras" href="#collapse{{countCarreras+1}}">{{datosCarrera.nombre}}</a>
+                           <a id="idCarrera-{{datosCarrera.idcarrera}}" class="linkCarreras" data-toggle="collapse" data-parent="#accordionCarreras" href="#collapse{{countCarreras+1}}">{{datosCarrera.nombreCarrera}}</a>
                            <div style="float:right; margin-top: -7px;">
-                              <button id="homeCarrera-{{datosCarrera.id_sa_carrera}}" class="btn btn-default btn-circle" type="button" style="font-size: 16px; padding: 2px 6px;">
+                              <button id="homeCarrera-{{datosCarrera.idCarrera}}" class="btn btn-default btn-circle" type="button" style="font-size: 16px; padding: 2px 6px;">
                                  <i class="fa fa-home"></i>
                               </button>
                            </div>
                         </h4>
                      </div>
                      <div id="collapse{{countCarreras+1}}" class="panel-collapse collapse">
-                        <div  id="panelCarrera-{{datosCarrera.id_sa_carrera}}" class="panel-body"></div>
+                        <div  id="panelCarrera-{{datosCarrera.idCarrera}}" class="panel-body"></div>
                      </div>
                   </div>
                {% endfor %}
