--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -19,10 +19,11 @@
 
 
      <!-- fullCalendar 2.2.5-->
-    <link rel="stylesheet" href="{{ asset('theme/plugins/fullcalendar/fullcalendar.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('theme/plugins/fullcalendar/fullcalendar.print.css') }}" media="print">
-  <link type="text/css" rel="stylesheet" href="{{ asset('css/growl/jquery.growl.css') }}" >
-  <script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
+   <link rel="stylesheet" href="{{ asset('theme/plugins/fullcalendar/fullcalendar.min.css') }}">
+   <link rel="stylesheet" href="{{ asset('theme/plugins/fullcalendar/fullcalendar.print.css') }}" media="print">
+   <link type="text/css" rel="stylesheet" href="{{ asset('css/growl/jquery.growl.css') }}" >
+   <script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
+   <script src="{{ asset('js/flavr/flavr.min.js') }}"></script>
 
   </head>
 
@@ -66,14 +67,13 @@
 
 {% block javascripts %}
     
-    <script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
+    {#<script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>#}
     <script src="{{ asset('theme/bootstrap/js/bootstrap.min.js') }}"></script>
     <script src="{{ asset('js/script/jquery-ui.js') }}"></script>
     <script src="{{ asset('theme/plugins/slimScroll/jquery.slimscroll.min.js') }}"></script>
     <script src="{{ asset('theme/plugins/fastclick/fastclick.min.js') }}"></script>
     <script src="{{ asset('theme/dist/js/app.min.js') }}"></script>
     <script src="{{ asset('theme/dist/js/demo.js') }}"></script>
-    <script src="{{ asset('js/flavr/flavr.min.js') }}"></script>
 
     <script src="{{ asset('js/sistemau.functions.js') }}"></script>
     <script src="{{ asset('js/academico.alerts.js') }}"></script>
